--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "sever/server.js",
+  "main": "server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.2"
+  }
 }
